<resources>
	<string name="app_name">RapiDO</string>
	<string name="add_title">Add Todo</string>
	<string name="add">Add</string>
	<string name="cancel">Cancel</string>
	<string name="task_hint_title">What to do?</string>
	<string name="add_random">Add Random</string>
	<string name="error_network">Network error</string>
	<string name="disconnected">Disconnected</string>
	<string name="connecting">Connecting</string>
	<string name="subscribe">Subscribe</string>
	<string name="unsubscribe">Unsubscribe</string>
	<string name="auth">Auth</string>
	<string name="deauth">Deauth</string>
	<string name="search">Search</string>
	<string name="filter">Filter</string>
	<string name="task_hint_description">Description</string>
	<string name="created_at_prefix">Created\u0020</string>
	<string name="edit_task_title">Edit Task</string>
	<string name="drawer_open">Open filter</string>
	<string name="drawer_close">Close filter</string>
	<string name="order_by">Order by</string>
	<string name="filter_done">Done</string>
	<string name="filter_all">All</string>
	<string name="filter_not_done">Not Done</string>
</resources>
