<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto">

	<data>

		<variable
			name="viewModel"
			type="io.rapid.rapido.ui.edit.EditTaskViewModel"/>
	</data>

	<android.support.design.widget.CoordinatorLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<android.support.design.widget.AppBarLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			app:elevation="0dp">

			<android.support.v7.widget.Toolbar
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="@color/white"
				app:navigationIcon="@drawable/ic_close"
				app:navigationOnClickListener="@{() -> viewModel.dismiss()}"
				app:theme="@style/ThemeOverlay.AppCompat.Light"
				app:title="@string/edit_task_title"/>
		</android.support.design.widget.AppBarLayout>


		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:clipToPadding="false"
			android:orientation="vertical"
			android:padding="@dimen/spacing_16"
			app:layout_behavior="@string/appbar_scrolling_view_behavior">

			<EditText
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/task_hint_title"
				android:imeOptions="actionDone"
				android:inputType="textCapWords"
				android:text="@={viewModel.task.title}"
				android:textAppearance="@style/TextAppearance.AppCompat.Display1"/>

			<EditText
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/spacing_16"
				android:hint="@string/task_hint_description"
				android:imeOptions="actionDone"
				android:inputType="textCapWords"
				android:text="@={viewModel.task.description}"
				android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>

			<Spinner
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="right"
				android:layout_marginTop="@dimen/spacing_16"
				android:entries="@array/priorities"
				android:padding="@dimen/spacing_8"
				android:selectedItemPosition="@={viewModel.task.priority}"/>
		</LinearLayout>

		<android.support.design.widget.FloatingActionButton
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="bottom|right"
			android:layout_margin="@dimen/spacing_16"
			android:onClick="@{() -> viewModel.onTaskUpdated()}"
			android:src="@drawable/ic_done"
			android:tint="@color/white"
			app:fabSize="normal"/>
	</android.support.design.widget.CoordinatorLayout>

</layout>
